Update the text in the Location KLineEdit only when the actual URL it represents conflicts with that of the current bookmark, not when the textual representations of the URLs differ.

BUG:172647

svn path=/trunk/KDE/kdebase/apps/; revision=902594